--- a/win/kiv-ups-agarserver.vcxproj
+++ b/win/kiv-ups-agarserver.vcxproj
@@ -44,12 +44,12 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>../src/System;../src/Network;../src/Gameplay;../dep/sqlite/</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../src/System;../src/Network;../src/Gameplay;../dep/sqlite/;../dep/sha1/</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;_SCL_SECURE_NO_WARNINGS;_MBCS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>dep-sqlite.lib;Ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>dep-sqlite.lib;dep-sha1.lib;Ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(SolutionDir)$(Configuration)\</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
@@ -61,13 +61,13 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;_SCL_SECURE_NO_WARNINGS;_MBCS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>../src/System;../src/Network;../src/Gameplay;../dep/sqlite/</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../src/System;../src/Network;../src/Gameplay;../dep/sqlite/;../dep/sha1/</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>dep-sqlite.lib;Ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>dep-sqlite.lib;dep-sha1.lib;Ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(SolutionDir)$(Configuration)\</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
@@ -80,6 +80,7 @@
     <ClCompile Include="..\src\Network\Session.cpp" />
     <ClCompile Include="..\src\System\Application.cpp" />
     <ClCompile Include="..\src\System\Config.cpp" />
+    <ClCompile Include="..\src\System\Helpers.cpp" />
     <ClCompile Include="..\src\System\Log.cpp" />
     <ClCompile Include="..\src\System\main.cpp" />
     <ClCompile Include="..\src\System\Storage.cpp" />
@@ -96,9 +97,11 @@
     <ClInclude Include="..\src\System\Application.h" />
     <ClInclude Include="..\src\System\Config.h" />
     <ClInclude Include="..\src\System\General.h" />
+    <ClInclude Include="..\src\System\Helpers.h" />
     <ClInclude Include="..\src\System\Log.h" />
     <ClInclude Include="..\src\System\Singleton.h" />
     <ClInclude Include="..\src\System\Storage.h" />
+    <ClInclude Include="..\src\System\Version.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
