--- a/win/kiv-ups-agarserver.vcxproj
+++ b/win/kiv-ups-agarserver.vcxproj
@@ -72,7 +72,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\src\Gameplay\Gameplay.cpp" />
     <ClCompile Include="..\src\Gameplay\Player.cpp" />
+    <ClCompile Include="..\src\Gameplay\Room.cpp" />
     <ClCompile Include="..\src\Gameplay\WorldObject.cpp" />
     <ClCompile Include="..\src\Network\GamePacket.cpp" />
     <ClCompile Include="..\src\Network\Network.cpp" />
@@ -86,7 +88,9 @@
     <ClCompile Include="..\src\System\Storage.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\src\Gameplay\Gameplay.h" />
     <ClInclude Include="..\src\Gameplay\Player.h" />
+    <ClInclude Include="..\src\Gameplay\Room.h" />
     <ClInclude Include="..\src\Gameplay\WorldObject.h" />
     <ClInclude Include="..\src\Network\GamePacket.h" />
     <ClInclude Include="..\src\Network\Network.h" />
